--- a/Hi_Core.Web/appsettings.json
+++ b/Hi_Core.Web/appsettings.json
@@ -1,7 +1,10 @@
 ﻿{
   "ConnectionStrings": {
     //"SqlServerConnString": "server=qds183421418.my3w.com;database=qds183421418_db;uid=qds183421418;password=chao012248;",
-    "SqlServerConnString": "server=.;database=Hi_Core;uid=lc;password=123456;"
+    "SqlServerConnString": "server=.;database=Hi_Core;uid=lc;password=123456;",
+    "MySqlConnection": "server=localhost;userid=root;pwd=chao012248;port=3306;database=hi_core;sslmode=none;"
+    //"MySqlConnection": "server=qdm165228377.my3w.com;userid=qdm165228377;pwd=chao012248;port=3306;database=qdm165228377_db;sslmode=none;"
+
   },
   "Logging": {
     "IncludeScopes": false,
